@@ -12,7 +12,6 @@ import au.com.mineauz.minigames.script.ScriptObject;
 import au.com.mineauz.minigames.script.ScriptReference;
 import au.com.mineauz.minigamesregions.Node;
 import au.com.mineauz.minigamesregions.Region;
-import com.google.common.collect.ImmutableSet;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.Material;
 import org.bukkit.configuration.file.FileConfiguration;
@@ -61,7 +60,7 @@ public class MessageAction extends AbstractAction {
         ScriptObject base = new ScriptObject() {
             @Override
             public Set<String> getKeys() {
-                return ImmutableSet.of("player", "area", "minigame", "team");
+                return Set.of("player", "area", "minigame", "team");
             }
 
             @Override
@@ -100,7 +99,7 @@ public class MessageAction extends AbstractAction {
         ScriptObject base = new ScriptObject() {
             @Override
             public Set<String> getKeys() {
-                return ImmutableSet.of("player", "area", "minigame", "team");
+                return Set.of("player", "area", "minigame", "team");
             }
 
             @Override
